--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </video>
                 </div>
             </div>
-            <div class="col-12 mt-5 mb-5">
+            <div id="home-text-1" class="col-12 col-md-7 mx-auto mt-5 mb-5">
                 <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from ticket
                     sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
             </div>
@@ -50,23 +50,69 @@
         <div class="col-12 p-0" id="home-img-1"></div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 mt-5 mb-5">
-                    <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from
+                <div class="col-12 col-md-8 offset-md-1 mt-5 mb-5">
+                    <p id="home-text-2">Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from
                         ticket
                         sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
                 </div>
             </div>
         </div>
         <div class="col-12 p-0" id="home-img-2"></div>
+        
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 mt-5 mb-5">
-                    <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from
-                        ticket
-                        sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
+                <div class="col-12 col-lg-6 mb-5" id="home-img-12"></div>
+
+                <div class="col-12 col-lg-6 p-5">
+                    <h2>Collaborate/Donate</h2>
+                    <p>We would love to meet you. Join us as a collaborator or donor. Your input is essential to our work, together we can make a difference. </p>
+                    <form name="contactform" method="post" action="send_form_email.php" class="container">
+                        <div class="row">
+
+                            <input class="mb-5 mt-4" type="text" name="first_name" maxlength="50" size="30" placeholder="Name">
+
+
+                            <input class="mb-5" type="text" name="email" maxlength="80" placeholder="Name@email.com">
+
+                            <textarea class="mb-3" name="comments" cols="25" rows="6" placeholder="tell your story"></textarea>
+                        </div>
+
+
+
+
+                        <input class="btn text-right mb-5" type="submit" value="Send">
+
+                    </form>
                 </div>
             </div>
+            <div class="row">
+
+            </div>
         </div>
+
+
+        </div>
+
+        <footer class="container-fluid">
+            <div class="row"> <img class="col-8 col-md-2 mx-auto" src="img/logo.png" alt="">
+                <div class="col-8 col-md-2 mx-auto d-flex flex-column text-center mb-3">
+
+                    <a class="" href="index.html">Home</a>
+                    <a class="" href="event.html">Event</a>
+                    <a class="" href="about.html">About</a>
+                    <a class="" href="creative.html">Creative platform</a>
+                </div>
+                <div class="col-8 col-md-2 mx-auto text-center">
+                    <a href="#">Facebook</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">Youtube</a>
+
+                </div>
+            </div>
+
+
+        </footer>
+
 
 
 
