--- a/event.html
+++ b/event.html
@@ -33,146 +33,208 @@
             </div>
 
             <div class="row">
-                <h1 class="col-12">THE CHARITY EVENT</h1>
-                <p class="col-12"> A unique evening of dance organized, choreographed and
+                <h1  class="event-title col-12 col-md-8 offset-md-1">THE CHARITY EVENT</h1>
+                <p  class="event-description col-12 col-md-8 offset-md-1"> A unique evening of dance organized, choreographed and
                     performed by the dancers of Nederlands Dans Theater.</p>
 
 
             </div>
         </div>
-        <div class="col-12 p-0" id="home-img-3"></div>
+        <div class="col-12 col-md-11 offset-md-1 p-0" id="home-img-3"></div>
         <div class="container-fluid">
             <div class="row">
-                <p class="col-12 mt-5">Switch gives the dancers of NDT an opportunity to be more than dancers, a chance to explore new facets and channels of their individual creativity and expression.</p>
-                <p class="col-12 mt-3 mb-5">What does it mean to create? How can I communicate through this art form? What are the boundaries of dance? Does dance even have boundaries? Switch awakens awareness and sensitivity, it develops innovative
-                    minds
-                    and gives birth to a new generation of choreographers.</p>
+                <div class="col-12 col-md-5 offset-md-1">
+                    <p class="col-12 mt-5 event-part-1">Switch gives the dancers of NDT an opportunity to be more than dancers, a chance to explore new facets and channels of their individual creativity and expression.</p>
+                    <p class="col-12 mt-3 mb-5 event-part-1">What does it mean to create? How can I communicate through this art form? What are the boundaries of dance? Does dance even have boundaries? Switch awakens awareness and sensitivity, it
+                        develops innovative
+                        minds
+                        and gives birth to a new generation of choreographers.</p>
+
+                </div>
+                <div class="col-12  col-md-6 p-0" id="home-img-4"></div>
             </div>
 
-            <div class="col-12 p-0" id="home-img-4"></div>
+
             <div class="row">
-                <h2 class="col-12 text-uppercase mt-3">But there is so much more to it than dance.</h2>
-                <p class="col-12 mt-3 mb-5">Besides Switch being a platform for choreographers, it also opens up the doors to complete new pathways.
-                    Each year, a group of dancers form a production team. They are the driving force of Switch and are in complete control from A to Z: from marketing, sponsoring and ticket sales to budgeting, scheduling and managing a full
-                    production team. Without any experience, they dive into this exciting challenge and learn as they go. Not only do they get to collaborate and meet
-                    with different people, they also get to experience all that goes into making an event.</p>
+                <div class="col-12 col-md-4 order-md-2 mt-5">
+                    <h2 class="col-12 text-uppercase mt-3">But there is so much more to it than dance.</h2>
+                    <p id="event-part-2" class="col-12 mt-3 mb-5">Besides Switch being a platform for choreographers, it also opens up the doors to complete new pathways.
+                        Each year, a group of dancers form a production team. They are the driving force of Switch and are in complete control from A to Z: from marketing, sponsoring and ticket sales to budgeting, scheduling and managing a full
+                        production team. Without any experience, they dive into this exciting challenge and learn as they go. Not only do they get to collaborate and meet
+                        with different people, they also get to experience all that goes into making an event.</p>
+                </div>
+                <div class="col-12 col-md-8 p-0 " id="home-img-5"></div>
+
             </div>
-            <div class="col-12 p-0" id="home-img-5"></div>
             <div class="row">
-                <h2 class="col-12 text-uppercase mt-3">IMPACT.</h2>
-                <p class="col-12 mt-3 mb-5">Besides Switch having a great impact on the dancers, Switch gives back to the world. Every year, the dancers choose a charity. The entire revenue of the event will be donated to the charity of choice. Each
+                <h2 id="impact"class="col-12 col-md-3 offset-md-3 text-uppercase mt-3">IMPACT.</h2>
+                <p id="impact-description"class="col-12 col-md-8 mx-auto mt-3 mb-5">Besides Switch having a great impact on the dancers, Switch gives back to the world. Every year, the dancers choose a charity. The entire revenue of the event will be donated to the charity of choice. Each
                     year Switch has donated up to €35000 for charity, making a big impact on communities and environments. Read more about our charities and how we have made an impact</p>
             </div>
             <div class="row">
-                <h2 class="col-12 text-uppercase mt-5">Why.</h2>
-                <p class="col-12 mt-3 ">The reason</p>
+                <h2 id="why" class="title col-12 col-md-10 offset-md-1 text-uppercase mt-5">Why.</h2>
+                <p id="the-reason"class="sub-title col-12 col-md-10 offset-md-1 mt-3 ">The reason</p>
             </div>
 
         </div>
-        <div class="col-12 p-0" id="home-img-6"></div>
+        <div class="col-12 col-md-10 offset-md-1 p-0" id="home-img-6"></div>
         <div class="container-fluid">
             <div class="row">
-                <p class="col-12 mt-5">17 new choreographies, created and executed by the dancers of Nederlands Dans
+                <p id="why-1" class="col-12 col-md-7 offset-md-1 mt-5">17 new choreographies, created and executed by the dancers of Nederlands Dans
                     Theater, in benefit of ‘Plastic Soup Foundation’</p>
-                <p class="col-12 mt-3">The oceans constitute 72% of the earth’s surface and are our primary oxygen suppliers. They are the primary source of food for more than half the world’s population. But because plastic is not biodegradable, the
+                <p class="col-12 col-md-8 offset-md-3 why-2 mt-3">The oceans constitute 72% of the earth’s surface and are our primary oxygen suppliers. They are the primary source of food for more than half the world’s population. But because
+                    plastic is not biodegradable, the
                     plastic soup is lethal for many marine animals.</p>
-                <p class="col-12 mt-3">When plastic degrades and fragments into small pieces, it can release toxic substances. All sorts of animals that live in or from the sea, even minute zooplankton, mistake plastic and microplastics for food.
+                <p class="col-12 col-md-8 offset-md-3 why-2 mt-3">When plastic degrades and fragments into small pieces, it can release toxic substances. All sorts of animals that live in or from the sea, even minute zooplankton, mistake plastic and
+                    microplastics for food.
                     These toxic substances then enter our food chain. On top of this, en route to the sea, plastic fragments absorb all kinds of toxic substances from the sewers and polluted areas that they pass through. They become toxic bombs.
                     These substances are released in the bodies of the organisms that eat the plastic.</p>
-                <p class="col-12 mt-3">The plastic pollution of the seawater can also seriously damage our health. Most of the pollution by far comes from land. At least 80% of the plastic rubbish in the oceans are dumped by industry and by people on
+                <p class="col-12 col-md-8 offset-md-3 why-2 mt-3">The plastic pollution of the seawater can also seriously damage our health. Most of the pollution by far comes from land. At least 80% of the plastic rubbish in the oceans are dumped
+                    by industry and by people on
                     land. It is carried to sea by rivers, canals, harbours and the wind. On top of this, shipping, fisheries and the off-shore industry are important contributors to pollution, though compared to the land sources, this is ‘only’ 20%.
                 </p>
-                <p class="col-12 mt-3 mb-5">Learn more about the plastic soup and how we fight against the biggest environmental crisis of our time on <a href=" https://www.plasticsoupfoundation.org/en"> https://www.plasticsoupfoundation.org/en</a>
+                <p class="col-12 col-md-3 offset-md-1 mt-3 mb-5">Learn more about the plastic soup and how we fight against the biggest environmental crisis of our time on <a href=" https://www.plasticsoupfoundation.org/en">
+                        https://www.plasticsoupfoundation.org/en</a>
                 </p>
             </div>
             <div class="row">
-                <h2 class="col-12 text-uppercase mt-5">How.</h2>
-                <p class="col-12 mt-3 ">The impact</p>
+                <h2 class="title col-12 text-uppercase mt-5">How.</h2>
+                <p class="sub-title col-12 mt-3 ">The impact</p>
             </div>
-            <div class="col-12 " id="home-img-7"></div>
             <div class="row">
-                <h2 class="col-12 text-uppercase mt-5">2019: LGBTQ Asylum Support.</h2>
-                <p class="col-12 mt-3 mb-5 ">
-                    LGBT Asylum Support is a Dutch NGO (Non-Governmental Organization). They support lesbian, gay, bisexual and transgender (LGBT) asylum seekers in the Netherlands. They are a link between LGBT refugees and other Dutch organizations
-                    to help asylum seekers.
-                </p>
+                <div class="col-12 col-md-4">
+                    <div class="col-12 " id="home-img-7"></div>
+                    <div class="row">
+                        <h2 class="col-12 text-uppercase mt-5">2019: LGBTQ Asylum Support.</h2>
+                        <p class="col-12 mt-3 mb-5 ">
+                            LGBT Asylum Support is a Dutch NGO (Non-Governmental Organization). They support lesbian, gay, bisexual and transgender (LGBT) asylum seekers in the Netherlands. They are a link between LGBT refugees and other Dutch
+                            organizations
+                            to help asylum seekers.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="col-12 " id="home-img-8"></div>
+                    <div class="row">
+                        <h2 class="col-12 text-uppercase mt-5">2018: Instituto Terra.</h2>
+                        <p class="col-12 mt-3 mb-5">
+
+                            Founded in April 1998, the Instituto Terra is a community non-profit non-governmental organization that operates in the entire territory of the Valley of the River Doce between the states of Minas Gerais and Espírito
+                            Santo.
+                            The institute has defined its objectives as restoration of the ecosystem, production of Atlantic Forest seedlings, environmental outreach programs, environmental education and applied scientific research.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="col-12 " id="home-img-9"></div>
+                    <div class="row">
+                        <h2 class="col-12 text-uppercase mt-5">2017: The WakaWaka Foundation</h2>
+                        <p class="col-12 mt-3 mb-5">
+
+                            The WakaWaka Foundation is an international NGO based in the Netherlands. They provide people in off-grid areas in low income countries with safe, sustainable, and renewable power and light solutions. Their goal is to make
+                            solar
+                            solutions available to families who live in extreme poverty, in remote regions, or who are forced to leave their homes because of war, natural disaster or other reasons.
+                        </p>
+                    </div>
+                </div>
+
+
+
+
+
             </div>
 
-            <div class="col-12 " id="home-img-8"></div>
-            <div class="row">
-                <h2 class="col-12 text-uppercase mt-5">2018: Instituto Terra.</h2>
-                <p class="col-12 mt-3 mb-5">
-
-                    Founded in April 1998, the Instituto Terra is a community non-profit non-governmental organization that operates in the entire territory of the Valley of the River Doce between the states of Minas Gerais and Espírito Santo.
-                    The institute has defined its objectives as restoration of the ecosystem, production of Atlantic Forest seedlings, environmental outreach programs, environmental education and applied scientific research.
-                </p>
-            </div>
-
-            <div class="col-12 " id="home-img-9"></div>
-            <div class="row">
-                <h2 class="col-12 text-uppercase mt-5">2017: The WakaWaka Foundation</h2>
-                <p class="col-12 mt-3 mb-5">
-
-                    The WakaWaka Foundation is an international NGO based in the Netherlands. They provide people in off-grid areas in low income countries with safe, sustainable, and renewable power and light solutions. Their goal is to make solar
-                    solutions available to families who live in extreme poverty, in remote regions, or who are forced to leave their homes because of war, natural disaster or other reasons.
-                </p>
-            </div>
 
 
         </div>
         <div class="col-12 p-0 mb-5" id="home-img-10"></div>
         <div class="container-fluid">
             <div class="row">
-                <h2 class="col-12 mb-3">When</h2>
-                <h3 class="col-12">17 January</h3>
-                <p class="col-12">19:30</p>
-                <h3 class="col-12">18 January</h3>
-                <p class="col-12">19:30</p>
-                <h2 class="col-12 mb-3">Where</h2>
+                <h2 id="when" class="col-12 mb-3">When</h2>
             </div>
+            <div class="row">
+                <div class="offset-md-1 col-3">
+                    <h3 class="date">17 January</h3>
+                    <p class="time">19:30</p>
+                </div>
+                <div class="offset-md-1 col-3">
+                    <h3 class="date">18 January</h3>
+                    <p class="time">19:30</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <h2 id="where" class="col-12 mb-3">Where</h2>
+            </div>
+
         </div>
-        <div class="col-12 p-0 mb-5" id="home-img-11"></div>
+        </div>
+        <div class="col-12 col-md-11  p-0 mb-5" id="home-img-11"></div>
         <div class="container-fluid">
             <div class="row">
-                <h2 class="col-12 mb-3">Lucent Dans Theater</h2>
+                <h2 id="where-1" class="col-12 col-md-4 offset-md-2 mb-5">Lucent Dans Theater</h2>
 
-                <p class="col-12">The Switch’20 charity event will be hosted at our own house: Lucent Dans Theater. This is special since most of our beloved Lucent has already been broken down, making space for the new Amare center. The auditorium
+                <p id="where-2" class="col-12 col-md-7 offset-md-3 mb-5">The Switch’20 charity event will be hosted at our own house: Lucent Dans Theater. This is special since most of our beloved Lucent has already been broken down, making space for
+                    the new Amare center. The
+                    auditorium
                     of Lucent has been broken down, so we will be creating an intimate 360 audience right on the stage area, inviting the public to experience the new creations up close. The main studio will be transformed into a warm and welcoming
                     foyer, with live music, merchandise stands and bites. Besides the festivities in studio 1, you can visit our art gallery, located in the dancers canteen space. </p>
 
             </div>
         </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-lg-6 mb-5" id="home-img-12"></div>
 
-        <div class="row">
-            <div class="col-12">
-                <form name="contactform" method="post" action="send_form_email.php" class="container">
-                    <div class="row">
-                        <div class="col-12 col-lg-6">
-                            <label for="first_name">Voornaam *</label>
-                            <input type="text" name="first_name" maxlength="50" size="30">
-                        </div>
-                        <div class="col-12">
-                            <label class="d-block" for="email">Emailadres *</label>
+                <div class="col-12 col-lg-6 p-5">
+                    <h2>Collaborate/Donate</h2>
+                    <p>We would love to meet you. Join us as a collaborator or donor. Your input is essential to our work, together we can make a difference. </p>
+                    <form name="contactform" method="post" action="send_form_email.php" class="container">
+                        <div class="row">
 
-                            <input type="text" name="email" maxlength="80">
-                        </div>
-                        <div class="col-12">
-                            <label class="d-block" for="comments">Message *</label>
+                            <input class="mb-5 mt-4" type="text" name="first_name" maxlength="50" size="30" placeholder="Name">
 
-                            <textarea name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+
+                            <input class="mb-5" type="text" name="email" maxlength="80" placeholder="Name@email.com">
+
+                            <textarea class="mb-3" name="comments" cols="25" rows="6" placeholder="tell your story"></textarea>
                         </div>
 
-                    </div>
 
 
 
-                    <input class="btn btn-primary" type="submit" value="VERSTUUR">
+                        <input class="btn text-right mb-5" type="submit" value="Send">
 
-                </form>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+
             </div>
         </div>
 
+
         </div>
+
+        <footer class="container-fluid">
+            <div class="row"> <img class="col-8 col-md-2 mx-auto" src="img/logo.png" alt="">
+                <div class="col-8 col-md-2 mx-auto d-flex flex-column text-center mb-3">
+
+                    <a class="" href="index.html">Home</a>
+                    <a class="" href="event.html">Event</a>
+                    <a class="" href="about.html">About</a>
+                    <a class="" href="creative.html">Creative platform</a>
+                </div>
+                <div class="col-8 col-md-2 mx-auto text-center">
+                    <a href="#">Facebook</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">Youtube</a>
+
+                </div>
+            </div>
+
+
+        </footer>
 
 
 
