--- a/about.html
+++ b/about.html
@@ -1,108 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="De smaak van authentiek thaise streetfood, midden in den haag. kom nu ook langs bij mama thai voor de smaak van thailand.">
-        <meta name="keywords" content="Thai, Thai food, Thais restaurant">
-        <meta name="author" content="Julian Wieckardt">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description"
+      content="De smaak van authentiek thaise streetfood, midden in den haag. kom nu ook langs bij mama thai voor de smaak van thailand." />
+    <meta name="keywords" content="Thai, Thai food, Thais restaurant" />
+    <meta name="author" content="Julian Wieckardt" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+      integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Switch</title>
+  </head>
 
-        <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-
-        <link rel="stylesheet" href="css/style.css">
-        <title>Switch</title>
-    </head>
-
-    <body>
-
-        <div class="container-fluid ">
-
-            <div id="row-1" class="row justify-content-between d-flex">
-                <div class="col-4 col-lg-2 ">
-                    <h2 class="text-black mt-3">SWITCH</h2>
-
-
-                </div>
-                <div class="col-8 col-lg-10 text-right right-box ">
-                    <i class="fas fa-bars mt-3" id="hamburger"></i>
-                </div>
-                <h1 id="switch-title" class="text-black">SWITCH</h1>
-            </div>
-            <div id="row-2" class="row">
-                <div class="col-4 col-lg-2 "></div>
-                <div class="col-8 col-lg-10 overflow-hidden p-0 right-box ">
-                    <video autoplay muted loop id="myVideo">
-                        <source src="img/Switch_promo_V2.mp4" type="video/mp4">
-                        Your browser does not support HTML5 video.
-                    </video>
-                </div>
-            </div>
-            <div class="col-12 mt-5 mb-5">
-                <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from ticket
-                    sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
-            </div>
-
+  <body>
+    <div class="container-fluid">
+      <div id="" class="row justify-content-between d-flex">
+        <div class="col-4 col-lg-2 ">
+          <a href="index.html" class="logo text-black mt-3">SWITCH</a>
         </div>
-        <div class="col-12 p-0" id="home-img-1"></div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 mt-5 mb-5">
-                    <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from
-                        ticket
-                        sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
-                </div>
-            </div>
+        <div class="col-8 col-lg-10 text-right ">
+          <i class="fas fa-bars mt-3" id="hamburger"></i>
         </div>
-        <div class="col-12 p-0" id="home-img-2"></div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 mt-5 mb-5">
-                    <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from
-                        ticket
-                        sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
-                </div>
-            </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-lg-6 p-5">
+          <h1>Introduction</h1>
+          <h2>Now</h2>
+          <p> Switch is an interdisciplinary annual exhibit created by dancers from around the world to raise money for
+            charity, hosted by Nederlands Dans Theater. Switch provides the dancers of NDT the opportunity to create an
+            entire evening of art and dance. It is the chance to choreograph in a professional setting (with stage,
+            lights, costumes, etc.), take the organizational helm, and delve into the other sides of this artform we may
+            not always experience. It also serves as a platform for any kind of creativity. Switch gives every dancer
+            the opportunity to share their work outside of their daily schedule; it showcases art, photography, poetry
+            and all other forms of expression. Switch is the opportunity to dare to use our voices is a different way.
+            The opportunity to try something else. The opportunity to create and be something new. </p>
         </div>
-
-
-
-
-
-
-        <section id="menu">
-            <div class="container-fluid">
-                <div class="d-flex justify-content-between pt-3"> <a href="index,html">
-                        <h2 class="text-black">SWITCH</h2>
-                    </a> <i class="fas fa-times mt-2" id="close"></i>
-                </div>
+        <div class="col-12 col-lg-6 about-img-1"></div>
+      </div>
+      <div class="row">
+        <div class="col-12 order-lg-2 col-lg-6 p-5">
+          <h2>Past</h2>
+          <p> It all started in 1988 when the dancers of NDT started informally creating their own choreographies in
+            their free time. Interest grew and soon they decided to dedicate an evening in the studios to showcase their
+            creations to their fellow colleagues, they called this evening ‘Workshops’. World renowned choreographers
+            such as Paul Lightfoot, Sol Leon, Nacho Duato, Jorma Elo, Johan Inger and Medhi Walerski began their
+            choreographic career with Switch. Over the past decades, the project grew in popularity and diversity.
+            Developing a full evening of dance with the greater purpose of supporting a charity, and acting as a
+            creative platform for all forms of artistic expression, becoming the Switch we know today. </p>
+        </div>
+        <div class="col-12 col-lg-6 about-img-2"></div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-lg-6 p-5">
+          <h2>Future</h2>
+          <p> Switch is limitless and so is its future. We believe the next step lies outside the studios of NDT; we
+            want to reach out to the dance community, inspire to create, collaborate and share ideas. The launch of this
+            website is a first step to reaching this goal. </p>
+        </div>
+        <div class="col-12 col-lg-6 about-img-3"></div>
+      </div>
+      <div class="row">
+        <h2 class="col-12 text-center mt-5">Meet the Switch production team</h2>
+      </div>
+      <div class="row pr-3 team mt-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/fay.png" alt="" />
+              <p>Fay van Baar</p>
+            </div>
+            <div class="col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/emma.png" alt="" />
+              <p>Emma Bogerd</p>
+            </div>
+            <div class="col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/kiran.png" alt="" />
+              <p>Kiran Bonnema</p>
+            </div>
+            <div class=" col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/jesse.png" alt="" />
+              <p>Jesse Callaert</p>
+            </div>
+            <div class=" col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/rinako.png" alt="" />
+              <p>Rinako Iida</p>
+            </div>
+            <div class="col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/sebastian.png" alt="" />
+              <p class=" p-0"> Sebastian<br /> Kristensen Haynes </p>
+            </div>
+            <div class=" col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/cassandra.png" alt="" />
+              <p>Cassandra Martin</p>
+            </div>
+            <div class=" col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/austin.png" alt="" />
+              <p>Austin Meiteen</p>
+            </div>
+            <div class=" col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/auguste.png" alt="" />
+              <p>Auguste Palayer</p>
+            </div>
+            <div class=" col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/annika.png" alt="" />
+              <p>Annika Verplancke</p>
+            </div>
+            <div class=" col-4 col-md-3 col-lg-2">
+              <img class="mb-3" src="img/jianhui.png" alt="" />
+              <p>Jianhui Wang</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div id="sponsor" class="col-10 col-lg-10 mx-auto d-flex flex-wrap justify-content-center">
+            <h2 class="col-12 text-center mx-auto mb-5">Our sponsors</h2>
+            <img src="img/sponsor1.png" alt="" />
+            <img src="img/sponsor2.png" alt="" />
+            <img src="img/sponsor3.png" alt="" />
+            <img src="img/sponsor4.png" alt="" />
+            <img src="img/sponsor5.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="row">
+          <h2 class="title col-12 text-uppercase mt-5">More than dancers.</h2>
+          <p class="sub-title col-12 mt-3 ">creative platform</p>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <div class="col-12 " id="home-img-7"></div>
+            <div class="row p-3">
+              <h2>creative platform</h2>
+              <p>creative platform is going here</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="col-12 " id="home-img-8"></div>
+            <div class="row p-3">
+              <h2>creative platform</h2>
+              <p>creative platform is going here</p>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="col-12 " id="home-img-9"></div>
+            <div class="row p-3">
+              <h2>creative platform</h2>
+              <p>creative platform is going here</p>
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col-12 col-lg-6 mb-5" id="home-img-12"></div>
+            <div class="col-12 col-lg-6 p-5">
+              <h2>Collaborate/Donate</h2>
+              <p> We would love to meet you. Join us as a collaborator or donor. Your input is essential to our work,
+                together we can make a difference. </p>
+              <form name="contactform" method="post" action="send_form_email.php" class="container">
                 <div class="row">
-                    <nav class="col-8 col-md-4 mx-auto justify-content-center d-flex flex-column text-center ">
-                        <a class="mb-5" href="index.html">HOME</a>
-                        <a class="mb-5" href="event.html">EVENT</a>
-                        <a class="mb-5" href="about.html">ABOUT</a>
-                        <a class="mb-5" href="creative.html">CREATIVE PLATFORM</a>
-                        <a class="tickets" href="#">TICKETS</a>
-
-                    </nav>
+                  <input class="mb-5 mt-4" type="text" name="first_name" maxlength="50" size="30" placeholder="Name" />
+                  <input class="mb-5" type="text" name="email" maxlength="80" placeholder="Name@email.com" />
+                  <textarea class="mb-3" name="comments" cols="25" rows="6" placeholder="tell your story"></textarea>
                 </div>
+                <input class="btn text-right mb-5" type="submit" value="Send" />
+              </form>
             </div>
-
-        </section>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-        <script src="https://unpkg.com/swiper/js/swiper.js"></script>
-
-
-        <script type="text/javascript" src="js/main.js">
-
-        </script>
-
-    </body>
+          </div>
+          <div class="row"></div>
+        </div>
+      </div>
+      <footer class="container-fluid">
+        <div class="row">
+          <img class="col-8 col-md-2 mx-auto" src="img/logo.png" alt="" />
+          <div class="col-8 col-md-2 mx-auto d-flex flex-column text-center mb-3">
+            <a class="" href="index.html">Home</a>
+            <a class="" href="event.html">Event</a>
+            <a class="" href="about.html">About</a>
+            <a class="" href="creative.html">Creative platform</a>
+          </div>
+          <div class="col-8 col-md-2 mx-auto text-center">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Youtube</a>
+          </div>
+        </div>
+      </footer>
+      <section id="menu">
+        <div class="container-fluid">
+          <div class="d-flex justify-content-between pt-3">
+            <a href="index,html">
+              <h2 class="text-black">SWITCH</h2>
+            </a>
+            <i class="fas fa-times mt-2" id="close"></i>
+          </div>
+          <div class="row">
+            <nav class="col-8 col-md-4 mx-auto justify-content-center d-flex flex-column text-center ">
+              <a class="mb-5" href="index.html">HOME</a>
+              <a class="mb-5" href="event.html">EVENT</a>
+              <a class="mb-5" href="about.html">ABOUT</a>
+              <a class="mb-5" href="creative.html">CREATIVE PLATFORM</a>
+              <a class="tickets" href="#">TICKETS</a>
+            </nav>
+          </div>
+        </div>
+      </section>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+      </script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+      </script>
+      <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+      <script src="https://unpkg.com/swiper/js/swiper.js"></script>
+      <script type="text/javascript" src="js/main.js"></script>
+  </body>
 
 </html>
