--- a/index.html
+++ b/index.html
@@ -3,100 +3,128 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="De smaak van authentiek thaise streetfood, midden in den haag. kom nu ook langs bij mama thai voor de smaak van thailand.">
+        <meta name="description"
+            content="De smaak van authentiek thaise streetfood, midden in den haag. kom nu ook langs bij mama thai voor de smaak van thailand.">
         <meta name="keywords" content="Thai, Thai food, Thais restaurant">
         <meta name="author" content="Julian Wieckardt">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+            integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
-
         <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-
         <link rel="stylesheet" href="css/style.css">
         <title>Switch</title>
     </head>
 
     <body>
-
         <div class="container-fluid ">
-
             <div id="row-1" class="row justify-content-between d-flex">
                 <div class="col-4 col-lg-2 ">
-                    <h2 class="text-black mt-3">SWITCH</h2>
-
-
+                    <a href="index.html" class="logo text-black mt-3">SWITCH</a>
                 </div>
                 <div class="col-8 col-lg-10 text-right right-box ">
                     <i class="fas fa-bars mt-3" id="hamburger"></i>
                 </div>
-                <h1 id="switch-title" class="text-black">SWITCH</h1>
+                <h1 id="switch-title" class="text-black">
+                    <span>S</span><span>W</span><span>I</span><span>T</span><span>C</span>
+                    <span>H</span> </h1>
+                </h1>
             </div>
-            <div id="row-2" class="row">
-                <div class="col-4 col-lg-2 "></div>
-                <div class="col-8 col-lg-10 overflow-hidden p-0 right-box ">
-                    <video autoplay muted loop id="myVideo">
-                        <source src="img/Switch_promo_V2.mp4" type="video/mp4">
-                        Your browser does not support HTML5 video.
-                    </video>
-                </div>
+        </div>
+        <div id="row-2" class="row">
+            <div class="col-4 col-lg-2 "></div>
+            <div class="col-8 col-lg-10 overflow-hidden p-0 right-box ">
+                <video autoplay muted loop id="myVideo">
+                    <source src="img/Switch_promo_V2.mp4" type="video/mp4"> Your browser does not support HTML5 video.
+                </video>
             </div>
-            <div id="home-text-1" class="col-12 col-md-7 mx-auto mt-5 mb-5">
-                <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from ticket
-                    sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
-            </div>
-
+        </div>
+        <div id="home-text-1" class="col-12 col-md-7 mx-auto mt-5 mb-5">
+            <p>Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire
+                evening of dance. Not only do we create new choreographies, we are responsible for the entire production
+                of the event; from ticket sales and marketing to fundraising and organization. The entire revenue of
+                Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
+        </div>
         </div>
         <div class="col-12 p-0" id="home-img-1"></div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-8 offset-md-1 mt-5 mb-5">
-                    <p id="home-text-2">Every year, the dancers of Nederlands Dans Theater take complete control and put together an entire evening of dance. Not only do we create new choreographies, we are responsible for the entire production of the event; from
-                        ticket
-                        sales and marketing to fundraising and organization. The entire revenue of Switch will be donated to a charity fund chosen by the dancers of NDT.</p>
+                    <p id="home-text-2">Every year, the dancers of Nederlands Dans Theater take complete control and put
+                        together an entire evening of dance. Not only do we create new choreographies, we are
+                        responsible for the entire production of the event; from ticket sales and marketing to
+                        fundraising and organization. The entire revenue of Switch will be donated to a charity fund
+                        chosen by the dancers of NDT.</p>
                 </div>
             </div>
         </div>
-        <div class="col-12 p-0" id="home-img-2"></div>
-        
+        <div class="col-12 p-0 mb-5" id="home-img-2"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="container-fluid col-12 col-md-3">
+                    <div class="row">
+                        <h2 id="event-dates" class="col-12 mb-3">EVENT DATES</h2>
+                    </div>
+                    <div class="row">
+                        <div class="offset-md-1 col-3 col-md-12">
+                            <h3 class="date">17 January</h3>
+                            <p class="time">19:30</p>
+                        </div>
+                        <div class="offset-md-1 col-3 offset-2 col-md-12">
+                            <h3 class="date">18 January</h3>
+                            <p class="time">19:30</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-8 p-0">
+                    <div class="col-9 offset-3 offset-md-0 col-md-12  p-0 mb-5" id="home-img-11"> </div>
+                    <div id="event-data">
+                        <h2 class="col-6">EVENT LOCATION</h2>
+                        <h3 class="col-6 mt-3">Lucent Dans Theater</h3>
+                        <p class="col-10 mt-5">We will be creating an intimate 360 audience right on the stage area,
+                            inviting the public to experience the new creations up close.</p>
+                        <a class="col-4 offset-8 btn mb-5" href="event.html#where">read more</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div id="sponsor" class="col-10 col-lg-10 mx-auto d-flex flex-wrap justify-content-center">
+                    <h2 class="col-12 text-center mx-auto mb-5">Our sponsors</h2>
+                    <img src="img/sponsor1.png" alt="">
+                    <img src="img/sponsor2.png" alt="">
+                    <img src="img/sponsor3.png" alt="">
+                    <img src="img/sponsor4.png" alt="">
+                    <img src="img/sponsor5.png" alt="">
+                </div>
+            </div>
+        </div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6 mb-5" id="home-img-12"></div>
-
                 <div class="col-12 col-lg-6 p-5">
                     <h2>Collaborate/Donate</h2>
-                    <p>We would love to meet you. Join us as a collaborator or donor. Your input is essential to our work, together we can make a difference. </p>
+                    <p>We would love to meet you. Join us as a collaborator or donor. Your input is essential to our
+                        work, together we can make a difference. </p>
                     <form name="contactform" method="post" action="send_form_email.php" class="container">
                         <div class="row">
-
-                            <input class="mb-5 mt-4" type="text" name="first_name" maxlength="50" size="30" placeholder="Name">
-
-
+                            <input class="mb-5 mt-4" type="text" name="first_name" maxlength="50" size="30"
+                                placeholder="Name">
                             <input class="mb-5" type="text" name="email" maxlength="80" placeholder="Name@email.com">
-
-                            <textarea class="mb-3" name="comments" cols="25" rows="6" placeholder="tell your story"></textarea>
+                            <textarea class="mb-3" name="comments" cols="25" rows="6"
+                                placeholder="tell your story"></textarea>
                         </div>
-
-
-
-
                         <input class="btn text-right mb-5" type="submit" value="Send">
-
                     </form>
                 </div>
             </div>
             <div class="row">
-
             </div>
         </div>
-
-
         </div>
-
         <footer class="container-fluid">
             <div class="row"> <img class="col-8 col-md-2 mx-auto" src="img/logo.png" alt="">
                 <div class="col-8 col-md-2 mx-auto d-flex flex-column text-center mb-3">
-
                     <a class="" href="index.html">Home</a>
                     <a class="" href="event.html">Event</a>
                     <a class="" href="about.html">About</a>
@@ -106,24 +134,16 @@
                     <a href="#">Facebook</a>
                     <a href="#">Instagram</a>
                     <a href="#">Youtube</a>
-
                 </div>
             </div>
-
-
         </footer>
-
-
-
-
-
-
-
         <section id="menu">
             <div class="container-fluid">
-                <div class="d-flex justify-content-between pt-3"> <a href="index,html">
+                <div class="d-flex justify-content-between pt-3">
+                    <a href="index.html">
                         <h2 class="text-black">SWITCH</h2>
-                    </a> <i class="fas fa-times mt-2" id="close"></i>
+                    </a>
+                    <i class="fas fa-times mt-2" id="close"></i>
                 </div>
                 <div class="row">
                     <nav class="col-8 col-md-4 mx-auto justify-content-center d-flex flex-column text-center ">
@@ -132,23 +152,23 @@
                         <a class="mb-5" href="about.html">ABOUT</a>
                         <a class="mb-5" href="creative.html">CREATIVE PLATFORM</a>
                         <a class="tickets" href="#">TICKETS</a>
-
                     </nav>
                 </div>
             </div>
-
         </section>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
         <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
         <script src="https://unpkg.com/swiper/js/swiper.js"></script>
-
-
         <script type="text/javascript" src="js/main.js">
-
         </script>
-
     </body>
 
 </html>
